Closed Bug 1648304 Opened 5 years ago Closed 5 years ago

Record WebRender compositor status in telemetry.

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox-esr78 --- verified
firefox78 --- verified
firefox79 --- verified

People

(Reporter: jrmuizel, Assigned: jrmuizel)

Details

Attachments

(2 files)

No description provided.
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/97d53e781f77 Record WebRender compositor status in telemetry. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

Comment on attachment 9159114 [details]
Bug 1648304 - Record WebRender compositor status in telemetry.

Beta/Release Uplift Approval Request

  • User impact if declined: The goal of this is to get improved telemetry on direct composition usage on release. The results will guide future rollout decisions.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This should be very low risk. There's no behaviour change it's just recording some additional information about the WebRender compositor.
  • String changes made/needed:
Attachment #9159114 - Flags: approval-mozilla-release?

Comment on attachment 9159114 [details]
Bug 1648304 - Record WebRender compositor status in telemetry.

approved for 78 rc2.

Attachment #9159114 - Flags: approval-mozilla-release? → approval-mozilla-release+
Attached file review.md
Attachment #9159314 - Flags: data-review?(chutten)
Comment on attachment 9159314 [details] review.md PRELIMINARY NOTES: There is a new edition of the [Data Review Request form](https://github.com/mozilla/data-review/blob/master/request.md) to use that asks where documentation for this collection lives. This collection will be documented at https://firefox-source-docs.mozilla.org/toolkit/components/telemetry/data/environment.html. DATA COLLECTION REVIEW RESPONSE: Is there or will there be documentation that describes the schema for the ultimate data set available publicly, complete and accurate? Yes. This collection is part of the Telemetry Environment so it is documented in its [in-tree documentation](https://firefox-source-docs.mozilla.org/toolkit/components/telemetry/data/environment.html). Is there a control mechanism that allows the user to turn the data collection on and off? Yes. This collection is Telemetry so can be controlled through Firefox's Preferences. If the request is for permanent data collection, is there someone who will monitor the data over time? Yes, :jrmuizel is responsible. Using the category system of data types on the Mozilla wiki, what collection type of data do the requested measurements fall under? Category 1, Technical. Is the data collection request for default-on or default-off? Default on for all channels. Does the instrumentation include the addition of any new identifiers? No. Is the data collection covered by the existing Firefox privacy notice? Yes. Does there need to be a check-in in the future to determine whether to renew the data? No. This collection is permanent. --- Result: datareview+
Attachment #9159314 - Flags: data-review?(chutten) → data-review+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Marking as verified for 78.0, 78.0esr, 79.0a1, 79.0a1 (2020-06-26) - Windows 10, macOS 10.15, Ubuntu 18.
Confirmed with additional data being displayed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: