Bug 1648304 - Record WebRender compositor status in telemetry. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D80994